fix services menu

--- a/app/services.html
+++ b/app/services.html
@@ -344,12 +344,21 @@
                                       <li><a href="#">Черный</a></li>
                                       <li><a href="#">Серый</a></li>
                                       <li><a href="#">Красный</a></li>
+                                      <li><a href="#">Черный</a></li>
+                                      <li><a href="#">Серый</a></li>
+                                      <li><a href="#">Красный</a></li>
                                     </ul>
                                   </li>
         
                                   <li class="eigh_type">
                                     <a href="#">Тип<img src="img/arr-black.svg" class="main_arr7" id="drop_img7" alt=""></a>
                                     <ul class="depth7">
+                                      <li><a href="#">Черный</a></li>
+                                      <li><a href="#">Серый</a></li>
+                                      <li><a href="#">Красный</a></li>
+                                      <li><a href="#">Черный</a></li>
+                                      <li><a href="#">Серый</a></li>
+                                      <li><a href="#">Красный</a></li>
                                       <li><a href="#">Черный</a></li>
                                       <li><a href="#">Серый</a></li>
                                       <li><a href="#">Красный</a></li>
