style Contacts page and fix left side menu

--- a/app/about.html
+++ b/app/about.html
@@ -305,7 +305,7 @@
 
 			<div id="my-content">
 
-        <section class="page_title_wr" style="background-image: url(img/about/about-top-bg.jpg);">
+        <section class="page_title_wr">
 
           <h1 class="page_title">О нас</h1>
           	
