--- a/app/news.html
+++ b/app/news.html
@@ -332,7 +332,7 @@
 							<div class="container nav_newss">
 									<div class="close_mob d-flex d-lg-none"><img src="img/cross.svg" class="hide_mnu" alt=""></div>	
 									<ul class="nav_news">
-										<li class="f_type bl_mob"><a href="#">Все новости<img src="img/arr-black.svg" class="main_arr" id="drop_img" alt=""><img src="img/arr-white.svg" id="wh_bt" alt=""></a>
+										<li class="f_type bl_mob"><a href="#">Все новости<img src="img/arr-black.svg" class="main_arr" id="drop_img" alt=""><img src="img/arr-white.svg" id="wh_bt" class="mob_img" alt=""></a>
 											<ul class="sub_news">
 												<li><a href="#">Пресс-центр</a></li>
 												<li><a href="#">СМИ о нас</a></li>
