--- a/app/project_open.html
+++ b/app/project_open.html
@@ -393,7 +393,7 @@
 
             
 
-                  <div class="row">
+                  <div class="row anim_itms">
 
                     <div class="col-lg-3 col-sm-6">
                       <div class="proj_cnt_itm">
@@ -453,7 +453,7 @@
               <div class="row">
   
                 <div class="col-12 col-lg-5 order-2 order-lg-1 col-xl-6 d-flex justify-content-center">
-                  <form class="form_call">
+                  <form class="form_call" id="callback">
   
                     <div class="f_wr">
   
@@ -508,17 +508,17 @@
                     <div class="exp_descr">
   
                       <div class="exp">
-                        <span class="exp_numb">25</span>
+                        <span class="exp_numb count1 count">0</span>
                         <p class="exp_txt">лет опыта разработки производственных проектов</p>
                       </div>
 
                       <div class="exp">
-                        <span class="exp_numb">200+</span>
+                        <span class="exp_numb count count2">0+</span>
                         <p class="exp_txt">успешных проектов разного масштаба в Украине и за рубежом</p>
                       </div>
 
                       <div class="exp">
-                        <span class="exp_numb">3</span>
+                        <span class="exp_numb count count3">0</span>
                         <p class="exp_txt">представительства в Болгарии, России, Чехии</p>
                       </div>
   
