--- a/app/services.html
+++ b/app/services.html
@@ -332,14 +332,16 @@
                 <div class="container nav_newss">
                     <div class="close_mob d-flex d-lg-none"><img src="img/cross.svg" class="hide_mnu" alt=""></div>	
                     <ul class="nav_news">
-                      <li class="f_type bl_mob"><a href="#">Все Услуги<img src="img/arr-black.svg" class="main_arr" id="drop_img" alt=""><img src="img/arr-white.svg" class="mob_wh" id="wh_bt" alt=""></a>
+                      <li class="f_type bl_mob"><a href="#">Все Услуги<img src="img/arr-black.svg" class="main_arr arr_add" id="drop_img" alt=""><img src="img/arr-white.svg" class="mob_wh mob_cust" id="wh_bt" alt=""></a>
                         <ul class="sub_news">
                           <li><a href="#">Управление проектами</a></li>
                           <li class="six_type">
-                            <a href="#">Проектирование<img src="img/arr-black.svg" class="main_arr5" id="drop_img5" alt=""></a>
+														<img src="img/arr-black.svg" class="main_arr5" id="drop_img5" alt="">
+                            <a href="#">Проектирование</a>
                             <ul class="depth5">
                                 <li class="sev_type">
-                                    <a href="#">Тип<img src="img/arr-black.svg" class="main_arr6" id="drop_img6" alt=""></a>
+																		<img src="img/arr-black.svg" class="main_arr6" id="drop_img6" alt="">
+                                    <a href="#">Тип</a>
                                     <ul class="depth6">
                                       <li><a href="#">Черный</a></li>
                                       <li><a href="#">Серый</a></li>
@@ -351,7 +353,8 @@
                                   </li>
         
                                   <li class="eigh_type">
-                                    <a href="#">Тип<img src="img/arr-black.svg" class="main_arr7" id="drop_img7" alt=""></a>
+																		<img src="img/arr-black.svg" class="main_arr7" id="drop_img7" alt="">
+                                    <a href="#">Тип</a>
                                     <ul class="depth7">
                                       <li><a href="#">Черный</a></li>
                                       <li><a href="#">Серый</a></li>
