--- a/app/services_open.html
+++ b/app/services_open.html
@@ -369,7 +369,7 @@
               <div class="row">
   
                 <div class="col-12 col-lg-5 order-2 order-lg-1 col-xl-6 d-flex justify-content-center">
-                  <form class="form_call">
+                  <form class="form_call" id="callback">
   
                     <div class="f_wr">
   
@@ -424,17 +424,17 @@
                     <div class="exp_descr">
   
                       <div class="exp">
-                        <span class="exp_numb">25</span>
+                        <span class="exp_numb count count1">0</span>
                         <p class="exp_txt">лет опыта разработки производственных проектов</p>
                       </div>
 
                       <div class="exp">
-                        <span class="exp_numb">200+</span>
+                        <span class="exp_numb count count2">0+</span>
                         <p class="exp_txt">успешных проектов разного масштаба в Украине и за рубежом</p>
                       </div>
 
                       <div class="exp">
-                        <span class="exp_numb">3</span>
+                        <span class="exp_numb count count3">0</span>
                         <p class="exp_txt">представительства в Болгарии, России, Чехии</p>
                       </div>
   
