--- a/app/install.html
+++ b/app/install.html
@@ -189,37 +189,37 @@
         
         <div class="row justify-content-start condition">
 
-          <div class="col-lg-4 col-md-6">
+          <div class="col-lg-4 col-6">
             <div class="cond_itm">
               <p>Зателефонувати до відділу продажів, домовитись про зустріч.</p>
               <span>01</span>
             </div>
           </div> 
-          <div class="col-lg-4 col-md-6">
+          <div class="col-lg-4 col-6">
             <div class="cond_itm">
               <p>Приїхати до відділу продажів і вибрати квартиру.</p>
               <span>02</span>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6">
+          <div class="col-lg-4 col-6">
             <div class="cond_itm">
               <p>Отримати знижку, забронювати квартиру.</p>
               <span>03</span>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6">
+          <div class="col-lg-4 col-6">
             <div class="cond_itm">
               <p>Мати з собою паспорт, ІПН, свідоцтво про шлюб.</p>
               <span>04</span>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6">
+          <div class="col-lg-4 col-6">
             <div class="cond_itm">
               <p>Підписати договір (Договір майнових прав*).</p>
               <span>05</span>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6">
+          <div class="col-lg-4 col-6 d-none d-sm-block">
             <div class="cond_itm">
               <a href="#" class="butt_bl">Детальніше</a>
             </div>
@@ -504,7 +504,7 @@
 
         <div class="row justify-content-center">
 
-          <div class="col-lg-4 col-md-6">
+          <div class="col-lg-4 col-sm-6">
             <div class="invest">
               <div class="img_itm">
                 <img src="img/about/shopping-bag.svg" alt="bag">
@@ -515,7 +515,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6">
+          <div class="col-lg-4 col-sm-6">
             <div class="invest">
               <div class="img_itm">
                 <img src="img/about/pharmacy.svg" alt="bag">
@@ -526,7 +526,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6">
+          <div class="col-lg-4 col-sm-6">
             <div class="invest">
               <div class="img_itm">
                 <img src="img/about/coffee-shop.svg" alt="bag">
@@ -540,7 +540,7 @@
 
           <!--  -->
 
-          <div class="col-lg-4 col-md-6">
+          <div class="col-lg-4 col-sm-6">
             <div class="invest">
               <div class="img_itm">
                 <img src="img/about/bicycle.svg" alt="bag">
@@ -551,7 +551,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6">
+          <div class="col-lg-4 col-sm-6">
             <div class="invest">
               <div class="img_itm">
                 <img src="img/about/group.svg" alt="bag">
@@ -562,7 +562,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6">
+          <div class="col-lg-4 col-sm-6">
             <div class="invest">
               <div class="img_itm">
                 <img src="img/about/dumbell.svg" alt="bag">
@@ -576,7 +576,7 @@
 
           <!--  -->
           
-          <div class="col-lg-4 col-md-6">
+          <div class="col-lg-4 col-sm-6">
             <div class="invest">
               <div class="img_itm">
                 <img src="img/about/do-not-enter.svg" alt="bag">
